lunch (0.2.3) unstable; urgency=low

  * Added the add_local_addess function to disable SSH for the given address.

 -- Alexandre Quessy <alexandre@quessy.net>  Thu, 14 Jan 2010 12:25:53 -0500

lunch (0.2.2) unstable; urgency=low

  * Fixed error with SSH keys not being used, since env vars were not passed.
  * Implemented minimal childs lifetime to restart.

 -- Alexandre Quessy <alexandre@quessy.net>  Wed, 13 Jan 2010 16:10:24 -0500

lunch (0.2.1) unstable; urgency=low

  * Improved backward-compatibility with scripts made with version 0.1

 -- Alexandre Quessy <alexandre@quessy.net>  Tue, 12 Jan 2010 09:13:00 -0500

lunch (0.2.0) unstable; urgency=low

  * Ported to Twisted

 -- Alexandre Quessy <alexandre@quessy.net>  Tue, 12 Jan 2010 08:04:31 -0500

lunch (0.1.4) unstable; urgency=low

  * Fixed a critical error in setup.py.

 -- Alexandre Quessy <alexandre@quessy.net>  Wed, 06 Jan 2010 10:24:41 -0500


lunch (0.1.3) unstable; urgency=low

  * Moved around files to prepare the lunch package.

 -- Alexandre Quessy <alexandre@quessy.net>  Tue, 05 Jan 2010 14:33:17 -0500

lunch (0.1.2) unstable; urgency=low

  * initial packaging

 -- Alexandre Quessy <alexandre@quessy.net>  Wed, 25 Nov 2009 14:52:21 -0500