@@ -22,7 +22,7 @@
 Tools for process management.
 """
 __version__ = "0.2.3"
-DESCRIPTION = "Lunch is a distributed process launcher for GNU/Linux. The lunch-slave executable must be installed on every host on which processes are to be run. The Lunch master launches slaves processes through an encrypted SSH session if on a remote host. Those slave processes can in turn launch the desired commands on-demand."
+DESCRIPTION = "Lunch is a distributed process launcher for GNU/Linux. The Lunch master launches lunch-slave processes through an encrypted SSH session if on a remote host. Those slave processes can in turn launch the desired commands on-demand."
 SCRIPTS_DIR = "scripts"
 def _is_in_devel():
     d = os.path.split(os.path.dirname(os.path.abspath(__file__)))[1]
@@ -35,10 +35,12 @@ if __name__ == "__main__":
     import os
     import sys
     from optparse import OptionParser
-    parser = OptionParser(usage="%prog [options]", version="%prog " + __version__, description=DESCRIPTION)
-    parser.add_option("-f", "--config-file", type="string", help="If run as master, specifies the python config file.")
-    #parser.add_option("-l", "--log-file", type="string", help="Specifies the log file to write to.")
+    parser = OptionParser(usage="%prog [config file] [options]", version="%prog " + __version__, description=DESCRIPTION)
+    parser.add_option("-f", "--config-file", type="string", help="Specifies the python config file. You can also simply specify the config file as the first argument.")
+    parser.add_option("-l", "--logging-directory", type="string", default="/var/tmp/lunch", help="Specifies the logging and pidfile directory for the master.")
+    parser.add_option("-q", "--log-to-file", action="store_true", help="Enables logging master infos to file and disables logging to standard output.")
     (options, args) = parser.parse_args()
+    # --------- set configuration file
     if options.config_file:
         config_file = options.config_file
     DEFAULT_CONFIG_FILE = os.path.expanduser("~/.lunchrc")
@@ -47,7 +49,6 @@ if __name__ == "__main__":
         config_file = args[0] 
     else:
         config_file = DEFAULT_CONFIG_FILE
-    
     if not os.path.exists(config_file):
         print("No such file: %s." % (config_file))
         sys.exit(1)
@@ -55,12 +56,19 @@ if __name__ == "__main__":
         d = os.path.split(os.path.dirname(os.path.abspath(__file__)))[0]
         sys.path.insert(0, d)
         os.environ["PATH"] += ":%s" % (os.path.join(d, SCRIPTS_DIR))
+    # --------- set if logging 
+    if options.log_to_file:
+        file_logging_enabled = True
+    else:
+        file_logging_enabled = False
+    logging_dir = options.logging_directory
+    # --------- load the module and run
     from lunch.master import run_master
     from lunch.master import FileNotFoundError
     from twisted.internet import reactor
     try:
         #print("DEBUG: using config_file %s" % (config_file))
-        master = run_master(config_file)
+        master = run_master(config_file, log_to_file=file_logging_enabled, log_dir=logging_dir)
     except FileNotFoundError, e:
         print("Error starting lunch as master.")
         print(e.message)
